Extract JDK compatibility check from BigQuery for reuse
This will be used in Snowflake connector too in the next commit.

Co-authored-by: Mateusz "Serafin" Gajewski <github@wendigo.pl>